--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 <head>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='mini-default.css')}}">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+{% block headcontent %}
+{% endblock %}
 </head>
 <body>
 <header>
